[package]
name = "cookpad"
version = "1.0.0"
edition = "2021"
description = "Unofficial Cookpad API client for Rust"
license = "Unlicense"
repository = "https://github.com/evex-dev/cookpad-rs"

[lib]
name = "cookpad"
path = "src/lib.rs"

[dependencies]
reqwest  = { version = "0.12", features = ["gzip", "json"] }
tokio    = { version = "1",    features = ["full"] }
serde    = { version = "1",    features = ["derive"] }
serde_json = "1"
uuid     = { version = "1",    features = ["v4"] }
thiserror = "2"
